--- a/views/case-summary-record.njk
+++ b/views/case-summary-record.njk
@@ -59,11 +59,11 @@
                         {%- for order in previousOrders %}
                             <tr class="govuk-table__row">
                                 <td class="govuk-table__cell govuk-!-width-two-thirds">
-                                    <p class="govuk-body govuk-!-margin-bottom-0"><a href="record/{{ order.convictionId }}" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{ order.sentence.description }}</a></p>
-                                    <p class="govuk-hint govuk-!-margin-top-0 govuk-!-margin-bottom-0">{{ order.offences[0].detail.description }}</p>
+                                    <p class="govuk-body govuk-!-margin-bottom-0 qa-previous-order-{{ loop.index }}"><a href="record/{{ order.convictionId }}" class="govuk-link govuk-link--no-visited-state govuk-!-font-weight-bold">{{ order.sentence.description }}</a></p>
+                                    <p class="govuk-hint govuk-!-margin-top-0 govuk-!-margin-bottom-0 qa-previous-order-{{ loop.index }}-offence">{{ order.offences[0].detail.description }}</p>
                                 </td>
                                 <td class="govuk-table__cell govuk-table__cell--numeric govuk-!-width-one-third" style="vertical-align: bottom">
-                                    <p class="govuk-hint govuk-!-margin-bottom-0">Ended on {{ params.moment(order.terminatedDate, 'YYYY-MM-DD').format('D MMM YYYY') }}</p>
+                                    <p class="govuk-hint govuk-!-margin-bottom-0 qa-termination-date qa-previous-order-{{ loop.index }}-end-date">Ended on {{ params.moment(order.sentence.terminationDate, 'YYYY-MM-DD').format('D MMM YYYY') }}</p>
                                 </td>
                             </tr>
                         {% endfor -%}
