--- a/views/case-summary-record-attendance.njk
+++ b/views/case-summary-record-attendance.njk
@@ -191,7 +191,7 @@
                     <dl class="govuk-summary-list">
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Status</dt>
-                            <dd class="govuk-summary-list__value qa-upw-status">{{ currentOrder.sentence.unpaidWork.status }}</dd>
+                            <dd class="govuk-summary-list__value qa-upw-status">{{ currentOrder.sentence.unpaidWork.status }} {{ '- ' + moment(currentOrder.sentence.unpaidWork.statusDate, 'YYYY-MM-DD').format('D MMM YYYY') if currentOrder.sentence.unpaidWork.statusDate }}</dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Hours ordered</dt>
