--- a/views/case-summary-record-attendance.njk
+++ b/views/case-summary-record-attendance.njk
@@ -196,11 +196,11 @@
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Hours ordered</dt>
-                            <dd class="govuk-summary-list__value qa-upw-ordered">{{ unpaidWork.offered or '0' }}</dd>
+                            <dd class="govuk-summary-list__value qa-upw-ordered">{{ unpaidWork.minutesOffered / 60 or '0' }}</dd>
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">Hours worked</dt>
-                            <dd class="govuk-summary-list__value qa-upw-worked">{{ unpaidWork.completed or '0' }}</dd>
+                            <dd class="govuk-summary-list__value qa-upw-worked">{{ unpaidWork.minutesCompleted / 60 or '0' }}</dd>
                         </div>
                     </dl>
 
