--- a/views/case-list.njk
+++ b/views/case-list.njk
@@ -12,22 +12,23 @@
 
 {% for item in data %}
 
-  {% set caseData = item.data | json %}
   {% set offences = [] %}
-  {% if caseData.offences.offence.title %}
-    {{ offences.push(caseData.offences.offence.title | escape) }}
-  {% elif caseData.offences.offence | length %}
+  {% if item.offences | length === 1 %}
+      {% for offence in item.offences %}
+          {{ offences.push(offence.offenceTitle |  escape) }}
+      {% endfor %}
+  {% elif item.offences | length %}
     {{ offences.push('<ol class="govuk-list govuk-list--number govuk-!-margin-bottom-0">') }}
-    {% for offence in caseData.offences.offence %}
-      {{ offences.push('<li>' + offence.title |  escape + '</li>') }}
+    {% for offence in item.offences %}
+      {{ offences.push('<li>' + offence.offenceTitle |  escape + '</li>') }}
     {% endfor %}
     {{ offences.push('</ol>') }}
   {% endif %}
   {{ tableData.rows.push([
-    { text: ('<a href="/case/' + caseData.caseno + '/details" class="pac-defendant-link govuk-link govuk-link--no-visited-state">' + caseData.def_name | escape + '</a>') | safe },
+    { text: ('<a href="/case/' + item.caseNo + '/details" class="pac-defendant-link govuk-link govuk-link--no-visited-state">' + item.defendantName | escape + '</a>') | safe },
     { text: ('<div>' + ('<span class="moj-badge moj-badge--black pac-badge">Breach</span>' | safe if item.breach) + ('<span class="moj-badge moj-badge--black pac-badge" style="">Sso</span>' | safe if item.suspendedSentenceOrder) + '</div>'+ item.probationStatus + ('<span data-cy="previously-known-termination-date" class="govuk-caption-m">Order ended ' + params.moment(item.previouslyKnownTerminationDate).format("D MMMM YYYY") | escape + '</span>' if item.previouslyKnownTerminationDate)) | safe },
     { text: offences | join('') | safe },
-    { text: caseData.listno },
+    { text: item.listNo },
     { text: item.session | capitalize },
     { text: item.courtRoom, format: "numeric" }
   ]) }}
