--- a/views/partials/case-details.njk
+++ b/views/partials/case-details.njk
@@ -31,7 +31,7 @@
 {{ breach.push(data.breach) if data.breach }}
 {% endif %}
 
-{% set dob = [params.moment(data.caseData.def_dob, 'DD-MM-YYYY').format('Do MMMM YYYY')] %}
+{% set dob = [params.moment(data.defendantDob, 'DD-MM-YYYY').format('Do MMMM YYYY')] %}
 {% set probationStatus = [] %}
 {{ probationStatus.push(data.probationStatus) if data.probationStatus }}
 
@@ -40,7 +40,7 @@
     {%- from "components/key-details-bar/macro.njk" import pacKeyDetailsBar -%}
     {{ pacKeyDetailsBar({
         accTitle: "Defendant: ",
-        title: data.caseData.def_name,
+        title: data.defendantName,
         crn: crn,
         pnc: pnc,
         dob: dob,
